ユーザー削除機能の実装

--- a/app/assets/stylesheets/users/show.css
+++ b/app/assets/stylesheets/users/show.css
@@ -131,7 +131,7 @@
   padding: 8px;
 }
 
-.store-link {
+.store-table-link {
   float: left;
   margin-right: 55px;
   background-color: lightskyblue;
