--- a/app/assets/stylesheets/users/show.css
+++ b/app/assets/stylesheets/users/show.css
@@ -5,11 +5,11 @@
 }
 
 .user-wrapper {
-    width: 80%;
-    margin: 0 auto;
-    background-color: white;
-    margin-top: 50px;
-    padding: 30px;
+  width: 80%;
+  margin: 0 auto;
+  background-color: white;
+  margin-top: 50px;
+  padding: 30px;
 }
 
 .user-infobox {
@@ -56,9 +56,11 @@
 }
 
 .user-link {
-  padding: 40px;
+  text-align: center;
+  width: 200px;
+  padding: 20px;
   background-color: lightskyblue;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
   border-radius: 20px;
   color: white;
   font-weight: bold;
