--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -27,7 +27,7 @@
         <h2 class="community-message-title">近くの人と食を通して交流しよう！</h2>
       </div>
       <div class="community-link">  
-        <%= link_to 'コミュニティ一覧ページへ', '#', class: 'community-btn' %>
+        <%= link_to 'コミュニティ一覧ページへ', communities_path, class: 'community-btn' %>
       </div>  
     </div>  
   </div>
