--- a/app/views/communities/index.html.erb
+++ b/app/views/communities/index.html.erb
@@ -1,1 +1,56 @@
-テスト
+<div class="community-index">
+  <%= render 'shared/header'%>
+    <div class="community-wrapper">
+      <div class="search-form">
+        <h2 class="search-community-title">コミュニティを検索！</h2>
+        <div class="community-form">
+        <%= form_with url: "#", method: :get, id: "search-form" do |f| %>
+        <%= f.text_field :keyword, class: "form-input-area"%>
+        <%= f.submit '検索する', class: "form-submit-btn" %>
+        <% end %>
+        </div>
+      </div>
+      <div class="search-result">
+      </div>
+      <div class="create-community">
+        <h2 class="create-title">コミュニティを作成しよう!</h2>
+        <div class="community-form">
+          <%= form_with url: "#", method: :get, id: "community-form" do |f| %>
+          <%= f.label :name, "コミュ二ティの名前", class: "form-label-name" %><span class="form-warning">必須</span>
+          <%= f.text_field :name, placeholder: "渋谷駅周辺の居酒屋", class: "form-input-area"%>
+          <%= f.submit '作成する', class: "form-submit-btn" %>
+          <% end %>
+        </div>  
+      </div>
+      <div class="community-lists">
+        <div class="community-lists-title">
+          <h2>コミュニティ一覧</h2>
+        </div>
+        <table class="community-table">
+          <tbody>
+            <tr class="table-record">
+              <th class="table-column3">コミュニティ作成日</th>
+              <th class="table-column3">コミュニティの名前</th>
+              <th class="table-column3">スレッド数</th>            
+              <th class="table-column5">リンク</th>
+            </tr>
+          <% @communities.each do |community| %>
+            <tr class="table-record">
+              <td class="table-column4"><%=l community.created_at %></td>
+              <td class="table-column4"><%= community.name %></td>
+              <td class="table-column4"><%= community.messages.length %></td>
+              <td class="table-column6">
+                <%= link_to '詳細ページへ', "#", class: "store-table-link" %>
+                <% if user_signed_in? && current_user.id == community.user_id %>
+                <%= link_to '編集する', "#",class: "store-table-link" %>
+                <%= link_to '削除する', "#", method: :delete, class: "store-table-link" %>
+                <% end %>
+              </td>  
+            </tr>         
+          <% end %>
+          </tbody>
+        </table>  
+      </div>
+    </div>
+  <%= render "shared/second_footer" %>
+</div>
