--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -14,6 +14,6 @@
       <%= link_to '新規登録', new_user_registration_path, class: 'link' %>
     <% end %>
       <%= link_to '飲食店を追加する' , new_store_path, class: 'link' %>
-      <%= link_to 'コミュニティ一覧へ', '#', class: 'link'%>
+      <%= link_to 'コミュニティ一覧へ', communities_path, class: 'link'%>
   </div>
 </header>
