--- a/app/assets/stylesheets/communities/index.css
+++ b/app/assets/stylesheets/communities/index.css
@@ -36,6 +36,25 @@
   margin-top: 30px;
 }
 
+.signin-title {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.signin-links {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
+}
+
+.signin-link {
+  padding: 10px 40px;
+  background-color: lightskyblue;
+  color: white;
+  font-weight: bold;
+  border-radius: 10px;
+}
+
 .community-lists {
   margin: 0 auto;
   width: 100%;
