--- a/app/views/communities/search.js.erb
+++ b/app/views/communities/search.js.erb
@@ -20,10 +20,10 @@
             <td class="table-column4"><%= community.name %></td>
             <td class="table-column4"><%= community.messages.length %></td>
             <td class="table-column6">
-              <%= link_to '詳細ページへ', community_messages_path(community), class: "store-table-link" %>
+              <%= link_to '詳細ページへ', community_messages_path(community), class: "community-table-link" %>
               <% if user_signed_in? && current_user.id == community.user_id %>
-              <%= link_to '編集する', "#",class: "store-table-link" %>
-              <%= link_to '削除する', "#", method: :delete, class: "store-table-link" %>
+              <%= link_to '編集する', edit_community_path(community),class: "community-table-link" %>
+              <%= link_to '削除する', community_path(community), method: :delete, class: "community-table-link" %>
               <% end %>
             </td>  
           </tr>
