--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -85,11 +85,11 @@
         </div>          
         <% end %>        
       <% else %>
-      <div class="store-signin">
-        <h4 class="signin-title">コメント投稿にはログインが必要です!</h4>
-        <div class="signin-links">
-          <%= link_to 'ログイン', new_user_session_path, class: "signin-link"%>
-          <%= link_to '新規登録',  new_user_registration_path , class: "signin-link"%>
+      <div class="store-sign-in">
+        <h4 class="sign-in-title">コメント投稿にはログインが必要です!</h4>
+        <div class="sign-in-links">
+          <%= link_to 'ログイン', new_user_session_path, class: "sign-in-link"%>
+          <%= link_to '新規登録',  new_user_registration_path , class: "sign-in-link"%>
         </div>
       </div>
       <% end %>
