--- a/app/assets/stylesheets/communities/index.css
+++ b/app/assets/stylesheets/communities/index.css
@@ -36,18 +36,18 @@
   margin-top: 30px;
 }
 
-.signin-title {
+.sign-in-title {
   text-align: center;
   margin-top: 20px;
 }
 
-.signin-links {
+.sign-in-links {
   display: flex;
   justify-content: space-around;
   margin-top: 20px;
 }
 
-.signin-link {
+.sign-in-link {
   padding: 10px 40px;
   background-color: lightskyblue;
   color: white;
@@ -70,3 +70,14 @@
   border-collapse: collapse;
   margin-top: 50px;
 }
+
+.community-table-link {
+  float: left;
+  margin-right: 55px;
+  background-color: lightskyblue;
+  color: white;
+  font-weight: bold;
+  border-radius: 10px;
+  padding: 5px;
+}
+
