--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,16 +1,5 @@
 (function() {
-  const HTML = `<div class="comment-upper">
-                  <div class="comment-user"><%= "#{@comment.user.nickname}さん" %></div>
-                  <div class="comment-date"><%= l @comment.created_at %></div>
-                </div>
-                <div class="comment-lower">
-                  <div class="comment-text"><%= @comment.comment %></div>
-                  <div class="comment-images">
-                  <% @comment.comment_images.each do |comment_image| %>
-                    <div class="comment-image"><%= image_tag comment_image.variant(resize: "200x200") %></div>
-                  <% end %>
-                  </div>  
-                </div>`;
+  const HTML = `<%= render partial: 'comments/comment', locals: {comment: @comment} %>`;
 
   const commentInput = document.getElementById("comment-input");
   commentInput.insertAdjacentHTML('afterbegin', HTML);
