--- a/app/views/communities/search.js.erb
+++ b/app/views/communities/search.js.erb
@@ -6,30 +6,7 @@
   const HTML = `
   <div id="search-result-first">
     <h2 class="search-community-title"><%="検索結果！(#{@search_communities.length}個)" %></h2>
-      <table class="community-table">
-        <tbody>
-          <tr class="table-record" id="input-record">
-            <th class="table-column3">コミュニティ作成日</th>
-            <th class="table-column3">コミュニティの名前</th>
-            <th class="table-column3">スレッド数</th>            
-            <th class="table-column5">リンク</th>
-          </tr>
-          <% @search_communities.each do |community| %>
-          <tr class="table-record" >
-            <td class="table-column4"><%=l community.created_at %></td>
-            <td class="table-column4"><%= community.name %></td>
-            <td class="table-column4"><%= community.messages.length %></td>
-            <td class="table-column6">
-              <%= link_to '詳細ページへ', community_messages_path(community), class: "community-table-link" %>
-              <% if user_signed_in? && current_user.id == community.user_id %>
-              <%= link_to '編集する', edit_community_path(community),class: "community-table-link" %>
-              <%= link_to '削除する', community_path(community), method: :delete, class: "community-table-link" %>
-              <% end %>
-            </td>  
-          </tr>
-          <% end %>
-        </tbody>
-      </table>
+    <%= render partial: 'communities/community_table', locals: {communities: @search_communities} %>
     </div>  
   `;
 
