--- a/app/views/likes/create.js.erb
+++ b/app/views/likes/create.js.erb
@@ -1,1 +1,1 @@
-document.getElementById("<%= @store.id %>").innerHTML = `<%= render partial: "shared/like", locals: { store: @store } %>`
+document.getElementById("<%= @store.id %>").innerHTML = `<%= render partial: "like", locals: { store: @store } %>`
