--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -21,7 +21,7 @@
         <div class="store-price"><%= "価格帯 : #{@store.price.name}"%></div>
         <div class="store-user"><%= "#{@store.user.nickname}さんのオススメ！"%></div>
         <div class="store-like" id="<%= @store.id %>">
-          <%= render partial: "shared/like", locals: {store: @store} %>
+          <%= render partial: "likes/like", locals: {store: @store} %>
         </div>
       </div>
     </div>
